syntax = "proto3";
package thesixnetwork.sixprotocol.nftmngr.v092;

option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types/v092";

message ActionExecutor {
  string nftSchemaCode = 1; 
  string executorAddress = 2; 
  string creator = 3;
}

message ActionExecutorBySchema {
  string nftSchemaCode = 1; 
  repeated string executorAddress = 2; 
}
