syntax = "proto3";
package thesixnetwork.sixprotocol.nftmngr.v093;

option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types/v093";

message ExecutorOfSchema {
  string nftSchemaCode = 1; 
  repeated string executorAddress = 2; 
  
}

